--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -4,5 +4,7 @@ version = 1
 name = "python"
 enabled = true
 
-  [analyzers.meta]
-  runtime_version = "3.x.x"
+[analyzers.meta]
+runtime_version = "3.x.x"
+
+test_patterns = ["tests/**", "test_*.py"]
